--- a/test-output/emailable-report.html
+++ b/test-output/emailable-report.html
@@ -8,12 +8,11 @@
 <body>
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Retried</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
-<tr><th colspan="8">Suite</th></tr>
-<tr><td><a href="#t0">Test</a></td><td class="num">2</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">14,968</td><td></td><td></td></tr>
+<tr><th colspan="8">Default suite</th></tr>
+<tr><td><a href="#t0">Default test</a></td><td class="num">1</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">4,291</td><td></td><td></td></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="2">com.TestNG.Day17_Feb_13_2024_Parametertization_Of_TestCases.Parameterization_TestNG_Xml_file</td><td><a href="#m0">loginTNParameterizationConcept</a></td><td rowspan="1">1707882511819</td><td rowspan="1">7315</td></tr><tr class="passedeven"><td><a href="#m1">registerTNParameterizationConcept</a></td><td rowspan="1">1707882519149</td><td rowspan="1">7587</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">com.automation.Day18_Feb_14_2024_Mouse_Keyboard_Actions.Mouse_Actions</td><td><a href="#m0">mouseActionsOperationsDragAndDrop</a></td><td rowspan="1">1707968708955</td><td rowspan="1">4253</td></tr></tbody>
 </table>
-<h2>Test</h2><h3 id="m0">com.TestNG.Day17_Feb_13_2024_Parametertization_Of_TestCases.Parameterization_TestNG_Xml_file#loginTNParameterizationConcept</h3><table class="result"><tr class="param"><th>Parameter #1</th><th>Parameter #2</th><th>Parameter #3</th></tr><tr class="param stripe"><td>https://tutorialsninja.com/demo</td><td>seleniumpanda@gmail.com</td><td>Selenium@123</td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m1">com.TestNG.Day17_Feb_13_2024_Parametertization_Of_TestCases.Parameterization_TestNG_Xml_file#registerTNParameterizationConcept</h3><table class="result"><tr class="param"><th>Parameter #1</th><th>Parameter #2</th><th>Parameter #3</th><th>Parameter #4</th><th>Parameter #5</th></tr><tr class="param stripe"><td>Selenium</td><td>Panda</td><td>123456789</td><td>Selenium@123</td><td>Selenium@123</td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>Default test</h2><h3 id="m0">com.automation.Day18_Feb_14_2024_Mouse_Keyboard_Actions.Mouse_Actions#mouseActionsOperationsDragAndDrop</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
