--- a/test-output/index.html
+++ b/test-output/index.html
@@ -38,8 +38,8 @@
       <div class="suite">
         <div class="rounded-window">
           <div class="suite-header light-rounded-window-top">
-            <a href="#" panel-name="suite-Suite" class="navigator-link">
-              <span class="suite-name border-passed">Suite</span>
+            <a href="#" panel-name="suite-Default_suite" class="navigator-link">
+              <span class="suite-name border-passed">Default suite</span>
             </a> <!-- navigator-link -->
           </div> <!-- suite-header light-rounded-window-top -->
           <div class="navigator-suite-content">
@@ -49,37 +49,37 @@
             <div class="suite-section-content">
               <ul>
                 <li>
-                  <a href="#" panel-name="test-xml-Suite" class="navigator-link ">
-                    <span>C:\Users\sarth\eclipse-workspace\PnTDec_23_Apr_24_WeekdayBatch\TestingParameterization_testng.xml</span>
+                  <a href="#" panel-name="test-xml-Default_suite" class="navigator-link ">
+                    <span>C:\Users\sarth\AppData\Local\Temp\testng-eclipse--1147544724\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
-                  <a href="#" panel-name="testlist-Suite" class="navigator-link ">
+                  <a href="#" panel-name="testlist-Default_suite" class="navigator-link ">
                     <span class="test-stats">1 test</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
-                  <a href="#" panel-name="group-Suite" class="navigator-link ">
+                  <a href="#" panel-name="group-Default_suite" class="navigator-link ">
                     <span>0 groups</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
-                  <a href="#" panel-name="times-Suite" class="navigator-link ">
+                  <a href="#" panel-name="times-Default_suite" class="navigator-link ">
                     <span>Times</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
-                  <a href="#" panel-name="reporter-Suite" class="navigator-link ">
+                  <a href="#" panel-name="reporter-Default_suite" class="navigator-link ">
                     <span>Reporter output</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
-                  <a href="#" panel-name="ignored-methods-Suite" class="navigator-link ">
+                  <a href="#" panel-name="ignored-methods-Default_suite" class="navigator-link ">
                     <span>Ignored methods</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
-                  <a href="#" panel-name="chronological-Suite" class="navigator-link ">
+                  <a href="#" panel-name="chronological-Default_suite" class="navigator-link ">
                     <span>Chronological view</span>
                   </a> <!-- navigator-link  -->
                 </li>
@@ -92,26 +92,21 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">2 methods,   2 passed</span>
+                    <span class="method-stats">1 method,   1 passed</span>
                   </li>
                   <li>
                     <span class="method-list-title passed">Passed methods</span>
                     <span class="show-or-hide-methods passed">
-                      <a href="#" panel-name="suite-Suite" class="hide-methods passed suite-Suite"> (hide)</a> <!-- hide-methods passed suite-Suite -->
-                      <a href="#" panel-name="suite-Suite" class="show-methods passed suite-Suite"> (show)</a> <!-- show-methods passed suite-Suite -->
+                      <a href="#" panel-name="suite-Default_suite" class="hide-methods passed suite-Default_suite"> (hide)</a> <!-- hide-methods passed suite-Default_suite -->
+                      <a href="#" panel-name="suite-Default_suite" class="show-methods passed suite-Default_suite"> (show)</a> <!-- show-methods passed suite-Default_suite -->
                     </span>
-                    <div class="method-list-content passed suite-Suite">
+                    <div class="method-list-content passed suite-Default_suite">
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Suite" title="com.TestNG.Day17_Feb_13_2024_Parametertization_Of_TestCases.Parameterization_TestNG_Xml_file" class="method navigator-link" hash-for-method="loginTNParameterizationConcept(https://tutorialsninja.com/demo, seleniumpanda@gmail.com, Selenium@123)">loginTNParameterizationConcept(https://tutorialsninja.com/demo, seleniumpanda@gmail.com, Selenium@123)</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Default_suite" title="com.automation.Day18_Feb_14_2024_Mouse_Keyboard_Actions.Mouse_Actions" class="method navigator-link" hash-for-method="mouseActionsOperationsDragAndDrop">mouseActionsOperationsDragAndDrop</a> <!-- method navigator-link -->
                       </span>
                       <br/>
-                      <span>
-                        <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Suite" title="com.TestNG.Day17_Feb_13_2024_Parametertization_Of_TestCases.Parameterization_TestNG_Xml_file" class="method navigator-link" hash-for-method="registerTNParameterizationConcept(Selenium, Panda, 123456789, Selenium@123, Selenium@123)">registerTNParameterizationConcept(Selenium, Panda, 123456789, Selenium@123, Selenium@123)</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                    </div> <!-- method-list-content passed suite-Suite -->
+                    </div> <!-- method-list-content passed suite-Default_suite -->
                   </li>
                 </ul>
               </div> <!-- suite-section-content -->
@@ -122,138 +117,126 @@
     </div> <!-- navigator-root -->
     <div class="wrapper">
       <div class="main-panel-root">
-        <div panel-name="suite-Suite" class="panel Suite">
-          <div class="suite-Suite-class-passed">
+        <div panel-name="suite-Default_suite" class="panel Default_suite">
+          <div class="suite-Default_suite-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
-              <span class="class-name">com.TestNG.Day17_Feb_13_2024_Parametertization_Of_TestCases.Parameterization_TestNG_Xml_file</span>
+              <span class="class-name">com.automation.Day18_Feb_14_2024_Mouse_Keyboard_Actions.Mouse_Actions</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="loginTNParameterizationConcept(https://tutorialsninja.com/demo, seleniumpanda@gmail.com, Selenium@123)">
-                  </a> <!-- loginTNParameterizationConcept(https://tutorialsninja.com/demo, seleniumpanda@gmail.com, Selenium@123) -->
-                  <span class="method-name">loginTNParameterizationConcept</span>
-                  <span class="parameters">(https://tutorialsninja.com/demo,seleniumpanda@gmail.com,Selenium@123)</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
-                  <a name="registerTNParameterizationConcept(Selenium, Panda, 123456789, Selenium@123, Selenium@123)">
-                  </a> <!-- registerTNParameterizationConcept(Selenium, Panda, 123456789, Selenium@123, Selenium@123) -->
-                  <span class="method-name">registerTNParameterizationConcept</span>
-                  <span class="parameters">(Selenium,Panda,123456789,Selenium@123,Selenium@123)</span>
+                  <a name="mouseActionsOperationsDragAndDrop">
+                  </a> <!-- mouseActionsOperationsDragAndDrop -->
+                  <span class="method-name">mouseActionsOperationsDragAndDrop</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
-          </div> <!-- suite-Suite-class-passed -->
-        </div> <!-- panel Suite -->
-        <div panel-name="test-xml-Suite" class="panel">
+          </div> <!-- suite-Default_suite-class-passed -->
+        </div> <!-- panel Default_suite -->
+        <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\sarth\eclipse-workspace\PnTDec_23_Apr_24_WeekdayBatch\TestingParameterization_testng.xml</span>
+            <span class="header-content">C:\Users\sarth\AppData\Local\Temp\testng-eclipse--1147544724\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
 &lt;?xml version=&quot;1.0&quot; encoding=&quot;UTF-8&quot;?&gt;
 &lt;!DOCTYPE suite SYSTEM &quot;https://testng.org/testng-1.0.dtd&quot;&gt;
-&lt;suite name=&quot;Suite&quot; guice-stage=&quot;DEVELOPMENT&quot;&gt;
-  &lt;test thread-count=&quot;5&quot; name=&quot;Test&quot;&gt;
-    &lt;parameter name=&quot;password&quot; value=&quot;Selenium@123&quot;/&gt;
-    &lt;parameter name=&quot;firstname&quot; value=&quot;Selenium&quot;/&gt;
-    &lt;parameter name=&quot;confirmpasswordR&quot; value=&quot;Selenium@123&quot;/&gt;
-    &lt;parameter name=&quot;telephone&quot; value=&quot;123456789&quot;/&gt;
-    &lt;parameter name=&quot;passwordR&quot; value=&quot;Selenium@123&quot;/&gt;
-    &lt;parameter name=&quot;url&quot; value=&quot;https://tutorialsninja.com/demo&quot;/&gt;
-    &lt;parameter name=&quot;email&quot; value=&quot;seleniumpanda@gmail.com&quot;/&gt;
-    &lt;parameter name=&quot;lastname&quot; value=&quot;Panda&quot;/&gt;
+&lt;suite name=&quot;Default suite&quot; guice-stage=&quot;DEVELOPMENT&quot;&gt;
+  &lt;test thread-count=&quot;5&quot; name=&quot;Default test&quot; verbose=&quot;2&quot;&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;com.TestNG.Day17_Feb_13_2024_Parametertization_Of_TestCases.Parameterization_TestNG_Xml_file&quot;/&gt;
+      &lt;class name=&quot;com.automation.Day18_Feb_14_2024_Mouse_Keyboard_Actions.Mouse_Actions&quot;&gt;
+        &lt;methods&gt;
+          &lt;include name=&quot;mouseActionsOperationsDragAndDrop&quot;/&gt;
+        &lt;/methods&gt;
+      &lt;/class&gt; &lt;!-- com.automation.Day18_Feb_14_2024_Mouse_Keyboard_Actions.Mouse_Actions --&gt;
     &lt;/classes&gt;
-  &lt;/test&gt; &lt;!-- Test --&gt;
-&lt;/suite&gt; &lt;!-- Suite --&gt;
+  &lt;/test&gt; &lt;!-- Default test --&gt;
+&lt;/suite&gt; &lt;!-- Default suite --&gt;
             </pre>
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
-        <div panel-name="testlist-Suite" class="panel">
+        <div panel-name="testlist-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">Tests for Suite</span>
+            <span class="header-content">Tests for Default suite</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <ul>
               <li>
-                <span class="test-name">Test (1 class)</span>
+                <span class="test-name">Default test (1 class)</span>
               </li>
             </ul>
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
-        <div panel-name="group-Suite" class="panel">
+        <div panel-name="group-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">Groups for Suite</span>
+            <span class="header-content">Groups for Default suite</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
-        <div panel-name="times-Suite" class="panel">
+        <div panel-name="times-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">Times for Suite</span>
+            <span class="header-content">Times for Default suite</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="times-div">
               <script type="text/javascript">
-suiteTableInitFunctions.push('tableData_Suite');
-function tableData_Suite() {
+suiteTableInitFunctions.push('tableData_Default_suite');
+function tableData_Default_suite() {
 var data = new google.visualization.DataTable();
 data.addColumn('number', 'Number');
 data.addColumn('string', 'Method');
 data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
-data.addRows(2);
+data.addRows(1);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'registerTNParameterizationConcept')
-data.setCell(0, 2, 'com.TestNG.Day17_Feb_13_2024_Parametertization_Of_TestCases.Parameterization_TestNG_Xml_file')
-data.setCell(0, 3, 7587);
-data.setCell(1, 0, 1)
-data.setCell(1, 1, 'loginTNParameterizationConcept')
-data.setCell(1, 2, 'com.TestNG.Day17_Feb_13_2024_Parametertization_Of_TestCases.Parameterization_TestNG_Xml_file')
-data.setCell(1, 3, 7315);
-window.suiteTableData['Suite']= { tableData: data, tableDiv: 'times-div-Suite'}
+data.setCell(0, 1, 'mouseActionsOperationsDragAndDrop')
+data.setCell(0, 2, 'com.automation.Day18_Feb_14_2024_Mouse_Keyboard_Actions.Mouse_Actions')
+data.setCell(0, 3, 4253);
+window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 14 seconds</span>
-              <div id="times-div-Suite">
-              </div> <!-- times-div-Suite -->
+              <span class="suite-total-time">Total running time: 4 seconds</span>
+              <div id="times-div-Default_suite">
+              </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
-        <div panel-name="reporter-Suite" class="panel">
+        <div panel-name="reporter-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">Reporter output for Suite</span>
+            <span class="header-content">Reporter output for Default suite</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
-        <div panel-name="ignored-methods-Suite" class="panel">
+        <div panel-name="ignored-methods-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">0 ignored methods</span>
+            <span class="header-content">2 ignored methods</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
+            <div class="ignored-class-div">
+              <span class="ignored-class-name">com.automation.Day18_Feb_14_2024_Mouse_Keyboard_Actions.Mouse_Actions</span>
+              <div class="ignored-methods-div">
+                <span class="ignored-method-name">mouseActionsOperations</span>
+                <br/>
+                <span class="ignored-method-name">mouseActionsOperationsDraggable</span>
+                <br/>
+              </div> <!-- ignored-methods-div -->
+            </div> <!-- ignored-class-div -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
-        <div panel-name="chronological-Suite" class="panel">
+        <div panel-name="chronological-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
             <span class="header-content">Methods in chronological order</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
-              <div class="chronological-class-name">com.TestNG.Day17_Feb_13_2024_Parametertization_Of_TestCases.Parameterization_TestNG_Xml_file</div> <!-- chronological-class-name -->
+              <div class="chronological-class-name">com.automation.Day18_Feb_14_2024_Mouse_Keyboard_Actions.Mouse_Actions</div> <!-- chronological-class-name -->
               <div class="test-method">
-                <span class="method-name">loginTNParameterizationConcept(https://tutorialsninja.com/demo, seleniumpanda@gmail.com, Selenium@123)</span>
+                <span class="method-name">mouseActionsOperationsDragAndDrop</span>
                 <span class="method-start">0 ms</span>
-              </div> <!-- test-method -->
-              <div class="test-method">
-                <span class="method-name">registerTNParameterizationConcept(Selenium, Panda, 123456789, Selenium@123, Selenium@123)</span>
-                <span class="method-start">7330 ms</span>
               </div> <!-- test-method -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
